
[[v0.19.0]]
== 0.19.0 (TBD)

icon:bullhorn[] Plugin System

[quote]
____
This version of Gentics Mesh introduces the _Plugin System_. A detailed description of this feature can be found in our https://getmesh.io/docs/beta/plugin-system.html[Plugin System Documentation].
____

icon:plus[] The base image of the Gentics Mesh docker container has been changed to `openjdk:10-slim`.

[[v0.18.3]]
== 0.18.3 (25.04.2018)

icon:check[] REST: Add error response when updating a user node reference without specifying the project name.

icon:check[] REST: Fixed the root cause of an inconsistency which caused the deletion of referenced nodes when deleting a node.

[[v0.18.2]]
== 0.18.2 (23.04.2018)

CAUTION: Database revision was updated due to OrientDB update. Thus only an link:https://getmesh.io/docs/beta/clustering.html#_offline_upgrade[offline upgrade] can be performed when using clustered mode.

CAUTION: The generation of the search index document version has been reworked in order to increase index sync performance.
         A triggered index sync will thus re-sync all documents. Triggering the sync action is not required and can be executed at any time.

icon:plus[] Backup/Restore: It is now no longer required to restart the server after a backup has been restored via the `/api/v1/admin/graphdb/restore` endpoint. link:https://github.com/gentics/mesh/issues/387[#387]

icon:plus[] OrientDB: The included OrientDB version has been updated to version 2.2.34

icon:plus[] Consistency: Additional consistency checks have been added.

icon:check[] Consistency: Various consistency issues have been fixed.

icon:check[] REST: Fixed various security related issues.

icon:check[] Core: Image data in binary fields will now only be processed/transformed if the binary is in a readable file format. The readable image file formats are `png`, `jpg`, `bmp` and `gif`.

icon:check[] Core: Added consistency checks for node versions.
