@@ -72,11 +72,10 @@ import com.gentics.mesh.parameter.LinkType;
 import com.gentics.mesh.parameter.SchemaUpdateParameters;
 import com.gentics.mesh.parameter.impl.NodeParametersImpl;
 import com.gentics.mesh.parameter.impl.VersioningParametersImpl;
-import com.gentics.mesh.plugin.factory.PluginVerticleFactory;
 import com.gentics.mesh.rest.client.MeshRequest;
 import com.gentics.mesh.rest.client.MeshRestClient;
-import com.gentics.mesh.search.TrackingSearchProvider;
 import com.gentics.mesh.search.SearchProvider;
+import com.gentics.mesh.search.TrackingSearchProvider;
 import com.gentics.mesh.test.TestDataProvider;
 import com.gentics.mesh.util.VersionNumber;
 import com.syncleus.ferma.tx.Tx;
@@ -128,10 +127,6 @@ public interface TestHelperMethods {
 
 	default BootstrapInitializer boot() {
 		return MeshInternal.get().boot();
-	}
-
-	default PluginVerticleFactory pluginFactory() {
-		return MeshInternal.get().pluginFactory();
 	}
 
 	default TestDataProvider data() {
