@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.gentics.mesh</groupId>
 		<artifactId>mesh</artifactId>
-		<version>0.18.4-SNAPSHOT</version>
+		<version>0.19.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>mesh-doc</artifactId>
