@@ -6,7 +6,7 @@
 
 	<groupId>com.gentics.mesh</groupId>
 	<artifactId>mesh</artifactId>
-	<version>0.18.4-SNAPSHOT</version>
+	<version>0.19.0-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
 	<name>Mesh</name>
